--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Handyman TJ offers reliable handyman services in NYC, including carpentry, painting, and furniture assembly.">
+ <meta name="description" content="Professional handyman services in New York City: furniture assembly, painting, drywall repair, door installation. Fast, reliable, affordable. Call now!">
   <link rel="icon" href="HandymanTJ.png" type="image/x-icon">
-  <title>Handyman TJ - New York</title>
+  <title>Handyman TJ - Furniture Assembly, Painting, Repairs in NYC</title>
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     * {
@@ -1483,4 +1484,5 @@
   </script>
 </body>
 </html>
+
 
