--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"></script>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C1CYLQL1TV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-XXXXXXX');
+
+  gtag('config', 'G-C1CYLQL1TV');
 </script>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="description" content="Professional handyman services in New York City: furniture assembly, painting, drywall repair, door installation. Fast, reliable, affordable. Call now!">
@@ -1491,6 +1494,7 @@
   </script>
 </body>
 </html>
+
 
 
 
