--- a/index.html
+++ b/index.html
@@ -1114,54 +1114,6 @@
       opacity: 1;
       transform: translateY(0);
     }
-
-       /* Booking Section */
-    .booking {
-      padding: 120px 5%;
-      background: linear-gradient(135deg, rgba(5,131,127,0.08), rgba(234,183,2,0.08));
-      text-align: center;
-    }
-    .booking h2 {
-      font-size: 2.8em;
-      color: var(--primary-teal);
-      margin-bottom: 20px;
-    }
-    .booking p {
-      font-size: 1.3em;
-      max-width: 900px;
-      margin: 0 auto 50px;
-      color: #444;
-    }
-    .cal-embed {
-      max-width: 1100px;
-      margin: 0 auto;
-      border-radius: 25px;
-      overflow: hidden;
-      box-shadow: var(--shadow-hover);
-    }
-    /* Hide "Powered by Cal.com" */
-    .cal-embed div[style*="font-size: 12px"],
-    .cal-embed a[href*="cal.com"] {
-      display: none !important;
-    }
-    .book-now-btn {
-      display: inline-block;
-      padding: 18px 50px;
-      background: linear-gradient(135deg, var(--primary-yellow), #cc9400);
-      color: #000;
-      border-radius: 50px;
-      font-weight: bold;
-      font-size: 1.3em;
-      text-decoration: none;
-      box-shadow: 0 8px 25px rgba(234,183,2,0.4);
-      transition: all 0.3s;
-      margin: 15px;
-    }
-    .book-now-btn:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 15px 40px rgba(234,183,2,0.6);
-    }
-   
   </style>
 </head>
 <body>
@@ -1205,7 +1157,7 @@
       <div class="hero-text">
         <h1>Making Your Home Perfect</h1>
         <p>Your Trusted Handyman in NYC</p>
-                <a href="#booking" class="book-now-btn">BOOK NOW – Check Availability</a>
+        <a href="#contact" class="cta-button">Get a Free Quote</a>
       </div>
     </div>
   </section>
@@ -1218,17 +1170,6 @@
       </div>
       <img src="HandymanTJ.png" alt="Handyman TJ Logo" class="about-logo">
     </div>
-  </section>
-
-   <section class="booking" id="booking">
-    <h2>Book Your Service Online</h2>
-    <p>Check my real-time availability and book instantly – I cover all 5 boroughs!</p>
-    <div class="cal-embed">
-      <cal-link cal-link="mrfreeman-freeland-gammt">
-        <iframe src="https://cal.com/mrfreeman-freeland-gammt?embed=1&embedType=inline" width="100%" height="1000" frameborder="0"></iframe>
-      </cal-link>
-    </div>
-    <a href="#booking" class="book-now-btn" style="margin-top:40px;">Open Calendar Again</a>
   </section>
 
   <section class="services" id="services">
@@ -1340,8 +1281,6 @@
       <button class="scroll-btn right" onclick="scrollVideos(1)"><i class="fas fa-chevron-right"></i></button>
     </div>
   </section>
-
- 
 
   <section class="gallery" id="gallery">
     <h2>Our Work</h2>
@@ -1555,3 +1494,6 @@
   </script>
 </body>
 </html>
+
+
+
