--- a/index.html
+++ b/index.html
@@ -1158,6 +1158,7 @@
         <h1>Making Your Home Perfect</h1>
         <p>Your Trusted Handyman in NYC</p>
         <a href="#contact" class="cta-button">Get a Free Quote</a>
+        <a href="booking.html" target="_blank" class="book-now-btn">BOOK ONLINE – Check My Availability</a>
       </div>
     </div>
   </section>
@@ -1494,6 +1495,7 @@
   </script>
 </body>
 </html>
+
 
 
 
