--- a/index.html
+++ b/index.html
@@ -1177,9 +1177,11 @@
       <div class="hero-text">
         <h1>Making Your Home Perfect</h1>
         <p>Your Trusted Handyman in NYC</p>
-        <a href="#contact" class="cta-button">Get a Free Quote</a>
-               <a href="booking.html" target="_blank" class="book-now-btn">📅 BOOK ONLINE NOW</a>
-      </div>
+        <div style="text-align:center;">
+          <a href="#contact" class="cta-button">Get a Free Quote</a>
+          <br><br>
+          <a href="booking.html" target="_blank" class="book-now-btn">📅 BOOK ONLINE NOW</a>
+        </div>
     </div>
   </section>
 
@@ -1516,6 +1518,7 @@
   </script>
 </body>
 </html>
+
 
 
 
