--- a/index.html
+++ b/index.html
@@ -180,6 +180,44 @@
       overflow: hidden;
       margin-top: 80px;
     }
+
+    /* Responsive YouTube Background Video */
+.video-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100vw;
+  height: 100vh;
+  transform: translate(-50%, -50%);
+  pointer-events: none; /* prevents interaction with the iframe */
+}
+
+/* Fix for mobile portrait – ensures it covers properly */
+@media (max-width: 768px) {
+  .video-wrapper iframe {
+    width: 150vw;
+    height: 150vh;
+  }
+}
+
+/* Extra safety for very tall mobile screens */
+@media (max-aspect-ratio: 9/16) {
+  .video-wrapper iframe {
+    width: 300vh;
+    height: 100vw;
+  }
+}
+   
     .hero video {
       position: absolute;
       top: 0;
@@ -1017,23 +1055,31 @@
     </div>
   </header>
 
-  <section class="hero" id="hero">
-    <video autoplay loop muted playsinline>
-      <source src="Main_Video_Handyman.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <div class="hero-overlay">
-      <div class="hero-text">
-        <h1>Making Your Home Perfect</h1>
-        <p>Your Trusted Handyman in NYC</p>
-        <div style="text-align:center;">
-          <a href="#contact" class="cta-button">Get a Free Quote</a>
-          <br><br>
-          <a href="#booking" class="book-now-btn">📅 BOOK ONLINE NOW</a>
-        </div>
+<section class="hero" id="hero">
+  <!-- Responsive YouTube Background Video -->
+  <div class="video-wrapper">
+    <iframe 
+      src="https://www.youtube.com/embed/Ixz_PnQrxws?autoplay=1&mute=1&loop=1&playlist=Ixz_PnQrxws&controls=0&showinfo=0&rel=0&modestbranding=1&iv_load_policy=3&playsinline=1&disablekb=1&fs=0"
+      title="Handyman TJ Background Video"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen>
+    </iframe>
+  </div>
+
+  <!-- Dark overlay + text (same as before) -->
+  <div class="hero-overlay">
+    <div class="hero-text">
+      <h1>Making Your Home Perfect</h1>
+      <p>Your Trusted Handyman in NYC</p>
+      <div style="text-align:center;">
+        <a href="#contact" class="cta-button">Get a Free Quote</a>
+        <br><br>
+        <a href="#booking" class="book-now-btn">📅 BOOK ONLINE NOW</a>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <section class="about" id="about">
     <div class="about-content">
@@ -1378,3 +1424,4 @@
   </script>
 </body>
 </html>
+
