--- a/index.html
+++ b/index.html
@@ -1399,9 +1399,7 @@
   </style>
 </head>
 <body>
-  <div class="urgency-bar" id="urgencyBar">
-    ⏰ Limited Time Offer: Book Today & Get 15% Off Your First Service!
-  </div>
+  
   
   <a href="#booking" class="floating-cta">
     <i class="fas fa-calendar-check"></i>
@@ -1457,7 +1455,7 @@
           <div class="trust-badges">
             <div class="badge">
               <i class="fas fa-shield-alt"></i>
-              <span>Licensed & Insured</span>
+              <span>Insured</span>
             </div>
             <div class="badge">
               <i class="fas fa-star"></i>
@@ -1465,7 +1463,7 @@
             </div>
             <div class="badge">
               <i class="fas fa-tools"></i>
-              <span>10+ Years Experience</span>
+              <span>5+ Years Experience</span>
             </div>
           </div>
         </div>
@@ -1482,15 +1480,15 @@
         
         <div class="stats">
           <div class="stat-item">
-            <div class="stat-number" id="projectsCount">500+</div>
+            <div class="stat-number" id="projectsCount">230+</div>
             <div class="stat-label">Projects Completed</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number" id="clientsCount">300+</div>
+            <div class="stat-number" id="clientsCount">80+</div>
             <div class="stat-label">Happy Clients</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number" id="experienceCount">10+</div>
+            <div class="stat-number" id="experienceCount">5+</div>
             <div class="stat-label">Years Experience</div>
           </div>
         </div>
@@ -1562,7 +1560,7 @@
         <img src="FloorInstallation.png" alt="Floor installation">
         <h3>Floor Installation</h3>
         <p>Installing various types of flooring.</p>
-        <div class="price-tag">Starting at $3/sq.ft</div>
+        <div class="price-tag">Starting at $3</div>
       </div>
       <div class="service">
         <img src="FloorRepair.png" alt="Floor repair">
@@ -1619,7 +1617,7 @@
     <h3>🔥 LIMITED TIME OFFER 🔥</h3>
     <p>Book any service this week and get 15% off + Free Consultation!</p>
     <div class="countdown">
-      Offer ends in: <span class="countdown-value" id="countdownTimer">24:00:00</span>
+      Offer ends in: <span class="countdown-value" id="countdownTimer">1 Month</span>
     </div>
   </div>
 
@@ -2000,3 +1998,4 @@
   </script>
 </body>
 </html>
+
