--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank" class="social-icon-header"><i
                         class="fab fa-yelp"></i></a>
                 <a href="tel:+1234567890" class="phone-cta">
-                    <i class="fas fa-phone-alt"></i> (555) 123-4567
+                    <i class="fas fa-phone-alt"></i> 
                 </a>
                 <a href="#booking" class="btn btn-primary btn-pulse">Book Now</a>
             </div>
@@ -71,7 +71,7 @@
 
         <div class="hero-content">
             <div class="hero-badge">
-                <i class="fas fa-star text-gold"></i> #1 Rated Handyman in NYC
+                <i class="fas fa-star text-gold"></i>Handyman in NYC
             </div>
             <h1>We Fix It Right,<br> <span class="text-gold">The First Time.</span></h1>
             <p>Professional furniture assembly, mounting, painting, and repairs. Fast, reliable service you can trust.
@@ -682,5 +682,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
