--- a/index.html
+++ b/index.html
@@ -668,8 +668,8 @@
                     <h3>Contact Info</h3>
                     <ul class="footer-links">
                         <li><i class="fas fa-map-marker-alt text-gold"></i> New York, NY</li>
-                        <li><i class="fas fa-phone text-gold"></i> (555) 123-4567</li>
-                        <li><i class="fas fa-envelope text-gold"></i> info@handymantj.com</li>
+                        <li><i class="fas fa-phone text-gold"></i></li>
+                        <li><i class="fas fa-envelope text-gold"></i>handymantj@gmail.com</li>
                     </ul>
                 </div>
             </div>
@@ -685,3 +685,4 @@
 
 
 </html>
+
