--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     target="_blank" class="social-icon-header"><i class="fab fa-instagram"></i></a>
                 <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank" class="social-icon-header"><i
                         class="fab fa-yelp"></i></a>
-                <a href="tel:+15551234567" class="phone-cta">
+                <!-- <a href="tel:+15551234567" class="phone-cta">
                     <i class="fas fa-phone-alt"></i> 📞 (555) 123-4567
-                </a>
+                </a> -->
                 <a href="#booking" class="btn btn-primary btn-pulse">Book Now</a>
             </div>
 
@@ -81,7 +81,7 @@
             </p>
 
             <div class="hero-btns">
-                <a href="tel:+15551234567" class="btn btn-secondary"><i class="fas fa-phone-alt"></i> Call Now</a>
+                <!-- <a href="tel:+15551234567" class="btn btn-secondary"><i class="fas fa-phone-alt"></i> Call Now</a> -->
                 <a href="#booking" class="btn btn-primary">Get Free Quote</a>
                 <a href="#services" class="btn btn-secondary">View Services</a>
             </div>
@@ -783,9 +783,9 @@
                     <h3>Contact Info</h3>
                     <ul class="footer-links">
                         <li><i class="fas fa-map-marker-alt text-gold"></i> New York, NY</li>
-                        <li><i class="fas fa-phone text-gold"></i> <a href="tel:+15551234567"
-                                style="color: inherit;">(555) 123-4567</a></li>
-                        <li><i class="fas fa-envelope text-gold"></i> info@handymantj.com</li>
+                        <!-- <li><i class="fas fa-phone text-gold"></i> <a href="tel:+15551234567"
+                                style="color: inherit;">(555) 123-4567</a></li> -->
+                        <li><i class="fas fa-envelope text-gold"></i>handymantj.nyc@gmail.com</li>
                     </ul>
                 </div>
             </div>
@@ -798,5 +798,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
