--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                     target="_blank" class="social-icon-header"><i class="fab fa-instagram"></i></a>
                 <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank" class="social-icon-header"><i
                         class="fab fa-yelp"></i></a>
-                <a href="tel:+15551234567" class="phone-cta">
+                <!-- <a href="tel:+15551234567" class="phone-cta">
                     <i class="fas fa-phone-alt"></i> 📞 (555) 123-4567
-                </a>
+                </a> -->
                 <a href="#booking" class="btn btn-primary btn-pulse">Book Now</a>
             </div>
 
@@ -112,7 +112,7 @@
 
         <div class="hero-content">
             <div class="hero-badge">
-                <i class="fas fa-star text-gold"></i> #1 Rated Handyman in NYC
+                <i class="fas fa-star text-gold"></i>Rated Handyman in NYC
             </div>
             <h1>Professional Handyman Services<br> <span class="text-gold">in New York City</span></h1>
             <p>Expert furniture assembly, mounting, painting, and repairs throughout NYC. Reliable service you can
@@ -820,3 +820,4 @@
 </body>
 
 </html>
+
