--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                     target="_blank" class="social-icon-header"><i class="fab fa-instagram"></i></a>
                 <a href="https://m.yelp.com/biz/tj-handyman-brooklyn" target="_blank" class="social-icon-header"><i
                         class="fab fa-yelp"></i></a>
-                <!-- <a href="tel:+15551234567" class="phone-cta">
-                    <i class="fas fa-phone-alt"></i> 📞 (555) 123-4567
-                </a> -->
+                <a href="tel:+15551234567" class="phone-cta">
+                    <i class="fas fa-phone-alt"></i> 📞718.600.6278
+                </a>
                 <a href="#booking" class="btn btn-primary btn-pulse">Book Now</a>
             </div>
 
@@ -799,16 +799,19 @@
                     </ul>
                 </div>
 
-                <div class="footer-col">
-                    <h3>Contact Info</h3>
-                    <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt text-gold"></i> New York, NY</li>
-                        <li><i class="fas fa-phone text-gold"></i> <a href="tel:+15551234567"
-                                style="color: inherit;">(555) 123-4567</a></li>
-                        <li><i class="fas fa-envelope text-gold"></i> info@handymantj.com</li>
-                    </ul>
-                </div>
-            </div>
+         <div class="footer-col">
+    <h3>Contact Info</h3>
+    <ul class="footer-links">
+        <li><i class="fas fa-map-marker-alt text-gold"></i>1780 w 3rd street Brooklyn NY 11223</li>
+        <li><i class="fas fa-phone text-gold"></i> 
+            <a href="tel:+15551234567" style="color: inherit;">718.600.6278</a>
+        </li>
+        <li><i class="fas fa-envelope text-gold"></i> 
+            <a href="mailto:handymantj.nyc@gmail.com" style="color: inherit;">handymantj.nyc@gmail.com</a>
+        </li>
+    </ul>
+</div>
+</div>
 
             <div class="copyright">
                 <p>&copy; <span id="year"></span> Handyman TJ. All Rights Reserved.</p>
@@ -820,4 +823,5 @@
 </body>
 
 </html>
+
 
