--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </p>
 
             <div class="hero-btns">
-                <a href="tel:+15551234567" class="btn btn-secondary"><i class="fas fa-phone-alt"></i> Call Now</a>
+                <!-- <a href="tel:718.600.6278" class="btn btn-secondary"><i class="fas fa-phone-alt"></i> Call Now</a> -->
                 <a href="#booking" class="btn btn-primary">Get Free Quote</a>
                 <a href="#services" class="btn btn-secondary">View Services</a>
             </div>
@@ -823,6 +823,7 @@
 </body>
 
 </html>
+
 
 
 
